--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <title>Learn Enough JavaScript</title>
     <meta charset="utf-8">
     <script>
-        alert("hello, world!");
-      </script>
+      alert("hello, world!");
+      console.log("This page contains a friendly greeting.");
+    </script>
   </head>
   <body>
     <h1>Hello, world!</h1>
