--- a/index.html
+++ b/index.html
@@ -1,18 +1,11 @@
-
 <!DOCTYPE html>
 <html>
   <head>
     <title>Learn Enough JavaScript</title>
     <meta charset="utf-8">
     <script>
-      function dayName(date) {
-        const daysOfTheWeek = ["Sunday", "Monday", "Tuesday", "Wednesday",
-                               "Thursday", "Friday", "Saturday"];
-        return daysOfTheWeek[date.getDay()];
-      }
-
       let now = new Date();
-      alert(`Hello, world! Happy ${dayName(now)}.`);
+      alert(`Hello, world! Happy ${dayName(now)}!`);
     </script>
   </head>
   <body>
